rename to index

--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,10 @@
 {
     "name": "augustinas/project",
-    "require": {}
+    "require": {
+		"ext-mysql": "*",
+		"ext-gettext": "*"
+    },
+   "require-dev": {
+      "heroku/heroku-buildpack-php": "*"
+   }
 }
