--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "augustinas/project",
     "require": {
-		"ext-mysql": "*",
+		"ext-mysqli": "*",
 		"ext-gettext": "*"
     },
    "require-dev": {
